--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <div class="body">
     <ul>
         <li><a href="#">lab01 - Home page</a></li>
-        <li><a href="#">lab02 - About me</a></li>
+        <li><a href="aboutme.html">lab02 - About me</a></li>
         <li><a href="#">lab03 - Recipe</a></li>
         <li><a href="#">lab04 - Movie review</a></li>
         <li><a href="#">lab05</a></li>
@@ -62,13 +62,13 @@
 
         <a  href="http://validator.w3.org/check?uri=referer"
                  onclick="this.href='http://validator.w3.org/check?uri=' + 
-            document.URL"> <img
-                src="pictures/w3c-html.png"
-                alt="html validator"/></a>
+                document.URL">
+            <img src="pictures/w3c-html.png" alt="html validator"/>
+        </a>
         
 
-<a href="https://jigsaw.w3.org/css-validator/check/referer">
-    <img src="pictures/vcss.gif"  alt="Valid CSS!" /></a>
+        <a href="https://jigsaw.w3.org/css-validator/check/referer">
+            <img src="pictures/vcss.gif"  alt="Valid CSS!" /></a>
     </div>
 
 
