--- a/aboutme.html
+++ b/aboutme.html
@@ -8,7 +8,7 @@
 <body>
  <div>
      <h1>About BELABBASSE Ayoub</h1>
-     <a><strong>My name is Ayoub, I am a <b>Software Engineer</b>, and a <b>student</b> at <b>Maharishi international University</b></strong></a>
+     <p class="caps"><strong>My name is Ayoub, I am a <b>Software Engineer</b>, and a <b>student</b> at <b>Maharishi international University</b></strong></p>
      <hr>
  </div>
 <div>
@@ -25,14 +25,32 @@
 </div>
  <div>
      <h2>Favorite Movies :</h2>
-     <p>(I don't watch too many movies I prefer series, so...here goes!)</p>
+     <p class="caps">I don't watch too many movies I prefer series, so...here goes!</p>
      <ol>
-         <li>The walking dead My Favorite serie<a href="https://www.imdb.com/title/tt1520211/?ref_=nv_sr_srsg_0"><span class="imdb-link">(IMDB)</span></a></li>
-         <li>Blacklist I like that kind of series where there is Drama crimes FBI and police<a href="https://www.imdb.com/title/tt2741602/?ref_=nv_sr_srsg_0"><span class="imdb-link">(IMDB)</span></a></li>
-         <li>Dexter the same thing as The Blacklist<a href="https://www.imdb.com/title/tt0773262/?ref_=nv_sr_srsg_0"><span class="imdb-link">(IMDB)</span></a></li>
-         <li>Suites is also on my top list of Comedy, Drama<a href="https://www.imdb.com/title/tt1632701/"><span class="imdb-link">(IMDB)</span></a></li>
-         <li>Game Of thrones<a href="https://www.imdb.com/title/tt0944947/?ref_=nv_sr_srsg_0"><span class="imdb-link">(IMDB)</span></a></li>
-         <li>The shawshank Redemption is my best Film ever<a href="https://www.imdb.com/title/tt0111161/?ref_=nv_sr_srsg_0"><span class="imdb-link">(IMDB)</span></a></li>
+         <li>The walking dead My Favorite serie<a href="https://www.imdb.com/title/tt1520211/?ref_=nv_sr_srsg_0"><span class="imdb-link">(IMDB)</span></a>
+             <ul class="movie">
+                 <li><a class="movie-detail">Director</a><br><a class="mov">Frank Darabont and Robert Kirkman</a></li>
+                 <li><a class="movie-detail">Genre</a><br><a class="mov">Horror Neo-Western Serial drama Zombie apocalypse</a></li>
+                 <li><a class="movie-detail">Tagline</a><br><a class="mov">Fight the dead. Fear the living. <strong>An eye for an eye</strong>.</a></li>
+                 <li><a class="movie-detail">Plot Outline</a><br><a class="mov">Sheriff Deputy Rick Grimes gets shot in combat and awakens to a zombie apocalypse. He meets a group on the outskirts of Atlanta and, soon, becomes their leader</a></li>
+             </ul>
+         </li>
+         <li>Blacklist I like that kind of series where there is Drama crimes FBI and police<a href="https://www.imdb.com/title/tt2741602/?ref_=nv_sr_srsg_0"><span class="imdb-link">(IMDB)</span></a>
+             <ul class="movie">
+                 <li><a class="movie-detail">Director</a><br><a class="mov">Jon Bokenkamp</a></li>
+                 <li><a class="movie-detail">Genre</a><br><a class="mov">Crime drama Action Thriller Mystery</a></li>
+                 <li><a class="movie-detail">Tagline</a><br><a class="mov"> It's good to be wanted</a></li>
+                 <li><a class="movie-detail">Plot Outline</a><br><a class="mov">A new FBI profiler, Elizabeth Keen, has her entire life uprooted when a mysterious criminal, Raymond Reddington, who has eluded capture for decades, turns himself in and insists on speaking only to her</a></li>
+             </ul>
+         </li>
+         <li>Dexter the same thing as The Blacklist<a href="https://www.imdb.com/title/tt0773262/?ref_=nv_sr_srsg_0"><span class="imdb-link">(IMDB)</span></a>
+             <ul class="movie">
+                 <li><a class="movie-detail">Director</a><br><a class="mov">James Manos Jr</a></li>
+                 <li><a class="movie-detail">Genre</a><br><a class="mov"> Crime, Drama, Mystery</a></li>
+                 <li><a class="movie-detail">Tagline</a><br><a class="mov">Americas favorite serial killer</a></li>
+                 <li><a class="movie-detail">Plot Outline</a><br><a class="mov">By day, mild-mannered Dexter is a blood-spatter analyst for the Miami police. But at night, he is a serial killer who only targets other murderers</a></li>
+             </ul>
+         </li>
      </ol>
  </div>
  <div>
