--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <ul>
         <li><a href="#">lab01 - Home page</a></li>
         <li><a href="aboutme.html">lab02 - About me</a></li>
-        <li><a href="#">lab03 - Recipe</a></li>
+        <li><a href="pie.html">lab03 - Recipe</a></li>
         <li><a href="#">lab04 - Movie review</a></li>
         <li><a href="#">lab05</a></li>
         <li><a href="#">lab06</a></li>
