--- a/pie.html
+++ b/pie.html
@@ -3,11 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles/recipe.css">
-
     <title >Grandma's Lemon Meringue Pie</title>
-    <link rel = "icon" href =
-            "pictures/pie_icon.gif"
-          type = "image/x-icon">
+    <link rel = "icon" href ="pictures/pie_icon.gif" type = "image/x-icon">
 </head>
 <body>
 <h1>Grandma's Lemon Meringue Pie</h1>
