--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <li><a href="aboutme.html">lab02 - About me</a></li>
         <li><a href="pie.html">lab03 - Recipe</a></li>
         <li><a href="tmnt.html">lab04 - Movie review</a></li>
-        <li><a href="#">lab05</a></li>
+        <li><a href="grades.html">lab05 - Grades Exercise</a></li>
         <li><a href="#">lab06</a></li>
         <li><a href="#">lab07</a></li>
         <li><a href="#">lab08</a></li>
