--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
     <ul>
         <li><a href="#">lab01 - Home page</a></li>
         <li><a href="aboutme.html">lab02 - About me</a></li>
-        <li><a href="pie.html">lab03 - Recipe</a></li>
-        <li><a href="tmnt.html">lab04 - Movie review</a></li>
-        <li><a href="grades.html">lab05 - Grades Exercise</a></li>
-        <li><a href="#">lab06</a></li>
+        <li><a href="pie.html">homework01 - Recipe</a></li>
+        <li><a href="tmnt.html">homework02 - Movie review</a></li>
+        <li><a href="grades.html">lab03 - Grades Exercise</a></li>
+        <li><a href="singup.html">homework04 - Nerdluv</a></li>
         <li><a href="#">lab07</a></li>
         <li><a href="#">lab08</a></li>
     </ul>
