--- a/aboutme.html
+++ b/aboutme.html
@@ -6,79 +6,91 @@
     <link rel="stylesheet" href="styles/aboutme.css">
 </head>
 <body>
- <div>
-     <h1>About BELABBASSE Ayoub</h1>
-     <p class="caps"><strong>My name is Ayoub, I am a <b>Software Engineer</b>, and a <b>student</b> at <b>Maharishi international University</b></strong></p>
-     <hr>
- </div>
+<div>
+    <h1>About BELABBASSE Ayoub</h1>
+    <p class="caps"><strong>My name is Ayoub, I am a <b>Software Engineer</b>, and a <b>student</b> at <b>Maharishi
+        international University</b></strong></p>
+    <hr>
+</div>
 <div>
     <h2>My Courses this Quarter :</h2>
     <ul>
         <li>CS401 - Modern Programming Practices</li>
         <li>STC506 - eadership for Tech Managers</li>
         <li>CS435 - Algorithms</li>
-        <li>CS472 - Web Application Programming	</li>
+        <li>CS472 - Web Application Programming</li>
         <li>CS544 - Enterprise Architecture</li>
         <li>CS572 - Modern Web Applications</li>
 
     </ul>
 </div>
- <div>
-     <h2>Favorite Movies :</h2>
-     <p class="caps">I don't watch too many movies I prefer series, so...here goes!</p>
-     <ol>
-         <li>The walking dead My Favorite serie<a href="https://www.imdb.com/title/tt1520211/?ref_=nv_sr_srsg_0"><span class="imdb-link">(IMDB)</span></a>
-             <ul class="movie">
-                 <li><a class="movie-detail">Director</a><br><a class="mov">Frank Darabont and Robert Kirkman</a></li>
-                 <li><a class="movie-detail">Genre</a><br><a class="mov">Horror Neo-Western Serial drama Zombie apocalypse</a></li>
-                 <li><a class="movie-detail">Tagline</a><br><a class="mov">Fight the dead. Fear the living. <strong>An eye for an eye</strong>.</a></li>
-                 <li><a class="movie-detail">Plot Outline</a><br><a class="mov">Sheriff Deputy Rick Grimes gets shot in combat and awakens to a zombie apocalypse. He meets a group on the outskirts of Atlanta and, soon, becomes their leader</a></li>
-             </ul>
-         </li>
-         <li>Blacklist I like that kind of series where there is Drama crimes FBI and police<a href="https://www.imdb.com/title/tt2741602/?ref_=nv_sr_srsg_0"><span class="imdb-link">(IMDB)</span></a>
-             <ul class="movie">
-                 <li><a class="movie-detail">Director</a><br><a class="mov">Jon Bokenkamp</a></li>
-                 <li><a class="movie-detail">Genre</a><br><a class="mov">Crime drama Action Thriller Mystery</a></li>
-                 <li><a class="movie-detail">Tagline</a><br><a class="mov"> It's good to be wanted</a></li>
-                 <li><a class="movie-detail">Plot Outline</a><br><a class="mov">A new FBI profiler, Elizabeth Keen, has her entire life uprooted when a mysterious criminal, Raymond Reddington, who has eluded capture for decades, turns himself in and insists on speaking only to her</a></li>
-             </ul>
-         </li>
-         <li>Dexter the same thing as The Blacklist<a href="https://www.imdb.com/title/tt0773262/?ref_=nv_sr_srsg_0"><span class="imdb-link">(IMDB)</span></a>
-             <ul class="movie">
-                 <li><a class="movie-detail">Director</a><br><a class="mov">James Manos Jr</a></li>
-                 <li><a class="movie-detail">Genre</a><br><a class="mov"> Crime, Drama, Mystery</a></li>
-                 <li><a class="movie-detail">Tagline</a><br><a class="mov">Americas favorite serial killer</a></li>
-                 <li><a class="movie-detail">Plot Outline</a><br><a class="mov">By day, mild-mannered Dexter is a blood-spatter analyst for the Miami police. But at night, he is a serial killer who only targets other murderers</a></li>
-             </ul>
-         </li>
-     </ol>
- </div>
- <div>
-     <h2>My Moods :</h2>
-     <div class="imag">
-         <p><a class="mood-pic">happy</a></p>
-         <img class="mood-pic" src="pictures/happy.png">
-         <p><a class="mood-pic">Sad</a></p>
-         <img  src="pictures/sad.png">
-     </div>
- </div>
- <div>
-     <h2>Fun Facts About My Neighbors :</h2>
-     <ul>
-         <li><a>Ayoub : he is too funny and like to spend time in good places</a></li>
-         <li><a>Soufiane : his nickname is Kipo he is crazy guy</a></li>
-     </ul>
- </div>
+<div>
+    <h2>Favorite Movies :</h2>
+    <p class="caps">I don't watch too many movies I prefer series, so...here goes!</p>
+    <ol>
+        <li>The walking dead My Favorite serie<a href="https://www.imdb.com/title/tt1520211/?ref_=nv_sr_srsg_0"><span
+                class="imdb-link">(IMDB)</span></a>
+            <ul class="movie">
+                <li><a class="movie-detail">Director</a><br><a class="mov">Frank Darabont and Robert Kirkman</a></li>
+                <li><a class="movie-detail">Genre</a><br><a class="mov">Horror Neo-Western Serial drama Zombie
+                    apocalypse</a></li>
+                <li><a class="movie-detail">Tagline</a><br><a class="mov">Fight the dead. Fear the living. <strong>An
+                    eye for an eye</strong>.</a></li>
+                <li><a class="movie-detail">Plot Outline</a><br><a class="mov">Sheriff Deputy Rick Grimes gets shot in
+                    combat and awakens to a zombie apocalypse. He meets a group on the outskirts of Atlanta and, soon,
+                    becomes their leader</a></li>
+            </ul>
+        </li>
+        <li>Blacklist I like that kind of series where there is Drama crimes FBI and police<a
+                href="https://www.imdb.com/title/tt2741602/?ref_=nv_sr_srsg_0"><span class="imdb-link">(IMDB)</span></a>
+            <ul class="movie">
+                <li><a class="movie-detail">Director</a><br><a class="mov">Jon Bokenkamp</a></li>
+                <li><a class="movie-detail">Genre</a><br><a class="mov">Crime drama Action Thriller Mystery</a></li>
+                <li><a class="movie-detail">Tagline</a><br><a class="mov"> It's good to be wanted</a></li>
+                <li><a class="movie-detail">Plot Outline</a><br><a class="mov">A new FBI profiler, Elizabeth Keen, has
+                    her entire life uprooted when a mysterious criminal, Raymond Reddington, who has eluded capture for
+                    decades, turns himself in and insists on speaking only to her</a></li>
+            </ul>
+        </li>
+        <li>Dexter the same thing as The Blacklist<a
+                href="https://www.imdb.com/title/tt0773262/?ref_=nv_sr_srsg_0"><span class="imdb-link">(IMDB)</span></a>
+            <ul class="movie">
+                <li><a class="movie-detail">Director</a><br><a class="mov">James Manos Jr</a></li>
+                <li><a class="movie-detail">Genre</a><br><a class="mov"> Crime, Drama, Mystery</a></li>
+                <li><a class="movie-detail">Tagline</a><br><a class="mov">Americas favorite serial killer</a></li>
+                <li><a class="movie-detail">Plot Outline</a><br><a class="mov">By day, mild-mannered Dexter is a
+                    blood-spatter analyst for the Miami police. But at night, he is a serial killer who only targets
+                    other murderers</a></li>
+            </ul>
+        </li>
+    </ol>
+</div>
+<div>
+    <h2>My Moods :</h2>
+    <div class="imag">
+        <p><a class="mood-pic">happy</a></p>
+        <img class="mood-pic" src="pictures/happy.png">
+        <p><a class="mood-pic">Sad</a></p>
+        <img src="pictures/sad.png">
+    </div>
+</div>
+<div>
+    <h2>Fun Facts About My Neighbors :</h2>
+    <ul>
+        <li><a>Ayoub : he is too funny and like to spend time in good places</a></li>
+        <li><a>Soufiane : his nickname is Kipo he is crazy guy</a></li>
+    </ul>
+</div>
 <div>
     <a href="http://validator.w3.org/check?uri=referer"
-        onclick="this.href='http://validator.w3.org/check?uri=' +
+       onclick="this.href='http://validator.w3.org/check?uri=' +
             document.URL"> <img
             src="pictures/w3c-html.png"
             alt="html validator"/></a>
 
 
     <a href="https://jigsaw.w3.org/css-validator/check/referer">
-        <img src="pictures/vcss.gif"  alt="Valid CSS!" /></a>
+        <img src="pictures/vcss.gif" alt="Valid CSS!"/></a>
 </div>
 
 </body>
