--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
         div.header {
             background: rgba(0, 128, 0, 0.3);
         }
-        div.body{
+
+        div.body {
             padding: 25px;
         }
-        footer.foot{
-            background-color:#ddd;
+
+        footer.foot {
+            background-color: #ddd;
             padding: 20px;
         }
     </style>
@@ -33,7 +35,8 @@
                           padding: 20px;
                            height: 130px;
                            ">
-        <img src="pictures/belabbasse.jpg" alt="belababsse ayoub picture"   style="border-radius: 50%; border: 2px solid #73AD21;height:100%">
+        <img src="pictures/belabbasse.jpg" alt="belababsse ayoub picture"
+             style="border-radius: 50%; border: 2px solid #73AD21;height:100%">
 
     </div>
 </header>
@@ -47,8 +50,16 @@
         <li><a href="tmnt.html">homework02 - Movie review</a></li>
         <li><a href="grades.html">lab03 - Grades Exercise</a></li>
         <li><a href="singup.html">homework04 - Nerdluv</a></li>
-        <li><a href="#">lab07</a></li>
-        <li><a href="#">lab08</a></li>
+        <li><a href="Onclickal/index.html">Onclick Javascript</a></li>
+        <li><a href="TipCalculator/index.html">Tip Calculator</a></li>
+        <li><a href="">Javascript Exercices (lab5a)</a>
+        <ul>
+            <li><a href="javascriptexercices/buggypage1/buggy1.html">Buggy Page 1</a></li>
+            <li><a href="javascriptexercices/buggypage2/buggy2.html">Buggy Page 2</a></li>
+            <li><a href="javascriptexercices/buggypage3/buggy3.html">Buggy Page 3</a></li>
+            <li><a href="javascriptexercices/buggypage4/buggy4.html">Buggy Page 4</a></li>
+        </ul></li>
+
     </ul>
 </div>
 
@@ -60,15 +71,15 @@
         <p>Maharishi international university</p>
         <p><a href="#"> Email : belabbasse.ayoub@gmail.com</a></p>
 
-        <a  href="http://validator.w3.org/check?uri=referer"
-                 onclick="this.href='http://validator.w3.org/check?uri=' + 
+        <a href="http://validator.w3.org/check?uri=referer"
+           onclick="this.href='http://validator.w3.org/check?uri=' +
                 document.URL">
             <img src="pictures/w3c-html.png" alt="html validator"/>
         </a>
-        
+
 
         <a href="https://jigsaw.w3.org/css-validator/check/referer">
-            <img src="pictures/vcss.gif"  alt="Valid CSS!" /></a>
+            <img src="pictures/vcss.gif" alt="Valid CSS!"/></a>
     </div>
 
 
