--- a/pie.html
+++ b/pie.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles/recipe.css">
 
-    <title >Grandma's Lemon Meringue Pie</title>
-    <link rel = "icon" href =
+    <title>Grandma's Lemon Meringue Pie</title>
+    <link rel="icon" href=
             "pictures/pie_icon.gif"
-          type = "image/x-icon">
+          type="image/x-icon">
 </head>
 <body>
 <h1>Grandma's Lemon Meringue Pie</h1>
@@ -63,12 +63,15 @@
         </li>
         <li><strong>Bake:</strong><a>Bake in preheated oven for 10 minutes, or until meringue is golden brown.</a></li>
     </ol>
-    <p>This is our favorite recipe here at Granny's Pies. It has been enjoyed by pie fans for many years. It's Granny's favorite! We hope you'll find that this<br> recipe is delicious and also easy to follow; it's a piece of <a style="text-decoration: line-through;">cake</a> pie!</p>
+    <p>This is our favorite recipe here at Granny's Pies. It has been enjoyed by pie fans for many years. It's Granny's
+        favorite! We hope you'll find that this<br> recipe is delicious and also easy to follow; it's a piece of <a
+                style="text-decoration: line-through;">cake</a> pie!</p>
 </div>
 <h2>USER COMMENTS</h2>
 <div class="comments">
     <div class="comment">
-        <p>This is a very fun recipe to follow, because Grandma makes it sweet and simple. This pie is thickened with cornstarch and flour in addition to egg yolks, and contains no milk.<br>
+        <p>This is a very fun recipe to follow, because Grandma makes it sweet and simple. This pie is thickened with
+            cornstarch and flour in addition to egg yolks, and contains no milk.<br>
             <br>- Emilie S.
         </p>
     </div>
@@ -87,27 +90,28 @@
 </div>
 <h2>LINKS</h2>
 <div>
-    <a href="http://www.google.com/search?q=lemon+meringue+pie+recipe&start=10" class="link">Search for other lemon meringue pie recipes
-    Home</a>
+    <a href="http://www.google.com/search?q=lemon+meringue+pie+recipe&start=10" class="link">Search for other lemon
+        meringue pie recipes
+        Home</a>
 </div>
 <div class="copyright-val">
     <div>
         <p>
             Copyright Â© 2012 Granny's Pies |<br>
-            A Granny's Pies Production     |<br>
-            All rights reserved            |
+            A Granny's Pies Production |<br>
+            All rights reserved |
         </p>
 
     </div>
     <div>
-        <a  href="http://validator.w3.org/check?uri=referer"
-            onclick="this.href='http://validator.w3.org/check?uri=' +
+        <a href="http://validator.w3.org/check?uri=referer"
+           onclick="this.href='http://validator.w3.org/check?uri=' +
                 document.URL"> <img
                 src="pictures/w3c-html.png"
                 alt="html validator"/></a>
 
         <a href="https://jigsaw.w3.org/css-validator/check/referer">
-            <img src="pictures/vcss.gif"  alt="Valid CSS!" /></a>
+            <img src="pictures/vcss.gif" alt="Valid CSS!"/></a>
     </div>
 </div>
 </body>
