--- a/tmnt.html
+++ b/tmnt.html
@@ -3,14 +3,14 @@
 <head>
     <title>TMNT - Rancid Tomatoes</title>
 
-    <meta charset="utf-8" />
-    <link href="styles/movie.css" type="text/css" rel="stylesheet" />
+    <meta charset="utf-8"/>
+    <link href="styles/movie.css" type="text/css" rel="stylesheet"/>
     <link rel="icon" href="pictures/rotten.gif" type="image/gif" sizes="16x16">
 </head>
 
 <body>
 <div id="banner">
-    <img src="pictures/banner.png" alt="Rancid Tomatoes" />
+    <img src="pictures/banner.png" alt="Rancid Tomatoes"/>
 </div>
 <h1>TMNT (2007)</h1>
 
@@ -30,7 +30,7 @@
                     <div class="review">
                         <div class="description">
                             <p>
-                                <img src="pictures/rotten.gif" alt="Rotten" /> <q>Ditching
+                                <img src="pictures/rotten.gif" alt="Rotten"/> <q>Ditching
                                 the cheeky, self-aware wink that helped to excuse the concept's
                                 inherent corniness, the movie attempts to look polished and
                                 'cool,' but the been-there animation can't compete with the
@@ -39,21 +39,21 @@
                         </div>
                         <div class="person">
                             <p>
-                                <img src="pictures/critic.gif" alt="Critic" />Peter Debruge<br />Variety
+                                <img src="pictures/critic.gif" alt="Critic"/>Peter Debruge<br/>Variety
                             </p>
                         </div>
                     </div>
                     <div class="review">
                         <div class="description">
                             <p>
-                                <img src="pictures/fresh.gif" alt="Fresh" /> <q>TMNT is a
+                                <img src="pictures/fresh.gif" alt="Fresh"/> <q>TMNT is a
                                 fun, action-filled adventure that will satisfy longtime fans
                                 and generate a legion of new ones.</q>
                             </p>
                         </div>
                         <div class="person">
                             <p>
-                                <img src="pictures/critic.gif" alt="Critic" /> Todd Gilchrist <br />
+                                <img src="pictures/critic.gif" alt="Critic"/> Todd Gilchrist <br/>
                                 IGN Movies
                             </p>
                         </div>
@@ -61,13 +61,14 @@
                     <div class="review">
                         <div class="description">
                             <p>
-                                <img src="pictures/rotten.gif" alt="Rotten" /> <q>It stinks!</q><p><br>
+                                <img src="pictures/rotten.gif" alt="Rotten"/> <q>It stinks!</q>
+                            <p><br>
                             </p>
                         </div>
                         <div class="person">
 
                             <p>
-                                <img src="pictures/critic.gif" alt="Critic" /> Jay Sherman
+                                <img src="pictures/critic.gif" alt="Critic"/> Jay Sherman
                                 (unemployed)
                             </p>
                         </div>
@@ -75,14 +76,14 @@
                     <div class="review">
                         <div class="description">
                             <p>
-                                <img src="pictures/rotten.gif" alt="Rotten" /> <q>The rubber
+                                <img src="pictures/rotten.gif" alt="Rotten"/> <q>The rubber
                                 suits are gone and they've been redone with fancy computer
                                 technology, but that hasn't stopped them from becoming dull.</q>
                             </p>
                         </div>
                         <div class="person">
                             <p>
-                                <img src="pictures/critic.gif" alt="Critic" /> Joshua Tyler <br />
+                                <img src="pictures/critic.gif" alt="Critic"/> Joshua Tyler <br/>
                                 CinemaBlend.com
                             </p>
                         </div>
@@ -90,13 +91,13 @@
                     <div class="review">
                         <div class="description">
                             <p>
-                                <img src="pictures/fresh.gif" alt="Fresh" /> <q> An older
+                                <img src="pictures/fresh.gif" alt="Fresh"/> <q> An older
                                 turtles movie with a surprisingly strong story.</q>
                             </p>
                         </div>
                         <div class="person">
                             <p>
-                                <img src="pictures/critic.gif" alt="Critic" /> Battuul <br />
+                                <img src="pictures/critic.gif" alt="Critic"/> Battuul <br/>
                                 Maharishi International University
                             </p>
                         </div>
@@ -106,7 +107,7 @@
                     <div class="review">
                         <div class="description">
                             <p>
-                                <img src="pictures/rotten.gif" alt="Rotten" /> <q>The turtles
+                                <img src="pictures/rotten.gif" alt="Rotten"/> <q>The turtles
                                 themselves may look prettier, but are no smarter; torn
                                 irreparably from their countercultural roots, our superheroes
                                 on the half shell have been firmly co-opted by the industry
@@ -115,8 +116,8 @@
                         </div>
                         <div class="person">
                             <p>
-                                <img src="pictures/critic.gif" alt="Critic" /> Jeannette
-                                Catsoulis <br /> New York Times
+                                <img src="pictures/critic.gif" alt="Critic"/> Jeannette
+                                Catsoulis <br/> New York Times
                             </p>
                         </div>
                     </div>
@@ -124,14 +125,14 @@
                         <div class="description">
 
                             <p>
-                                <img src="pictures/rotten.gif" alt="Rotten" /> <q>Impersonally
+                                <img src="pictures/rotten.gif" alt="Rotten"/> <q>Impersonally
                                 animated and arbitrarily plotted, the story appears to have
                                 been made up as the filmmakers went along.</q>
                             </p>
                         </div>
                         <div class="person">
                             <p>
-                                <img src="pictures/critic.gif" alt="Critic" /> Ed Gonzalez <br />
+                                <img src="pictures/critic.gif" alt="Critic"/> Ed Gonzalez <br/>
                                 Slant Magazine
                             </p>
                         </div>
@@ -140,14 +141,14 @@
                         <div class="description">
 
                             <p>
-                                <img src="pictures/fresh.gif" alt="Fresh" /> <q>The striking
+                                <img src="pictures/fresh.gif" alt="Fresh"/> <q>The striking
                                 use of image and motion allows each sequence to leave an
                                 impression. It's an accomplished restart to this franchise.</q>
                             </p>
                         </div>
                         <div class="person">
                             <p>
-                                <img src="pictures/critic.gif" alt="Critic" /> Mark Palermo<br />
+                                <img src="pictures/critic.gif" alt="Critic"/> Mark Palermo<br/>
                                 Coast (Halifax, Nova Scotia)
                             </p>
                         </div>
@@ -155,7 +156,7 @@
                     <div class="review">
                         <div class="description">
                             <p>
-                                <img src="pictures/rotten.gif" alt="Rotten" /> <q>The script
+                                <img src="pictures/rotten.gif" alt="Rotten"/> <q>The script
                                 feels like it was computer generated. This mechanical
                                 presentation lacks the cheesy charm of the three live action
                                 films.</q>
@@ -163,7 +164,7 @@
                         </div>
                         <div class="person">
                             <p>
-                                <img src="pictures/critic.gif" alt="Critic" /> Steve Rhodes <br />Internet
+                                <img src="pictures/critic.gif" alt="Critic"/> Steve Rhodes <br/>Internet
                                 Reviews
                             </p>
                         </div>
@@ -171,13 +172,13 @@
                     <div class="review">
                         <div class="description">
                             <p>
-                                <img src="pictures/rotten.gif" alt="Rotten" /> <q> So boring.</q>
+                                <img src="pictures/rotten.gif" alt="Rotten"/> <q> So boring.</q>
                             </p>
                             <div class="spacer"></div>
                         </div>
                         <div class="person">
                             <p>
-                                <img src="pictures/critic.gif" alt="Critic" /> Ayalguu <br />Head
+                                <img src="pictures/critic.gif" alt="Critic"/> Ayalguu <br/>Head
                                 of the family
                             </p>
                         </div>
@@ -187,12 +188,12 @@
         </div>
         <div class="rightSection colored">
             <div>
-                <img src="pictures/overview.png" alt="general overview" />
+                <img src="pictures/overview.png" alt="general overview"/>
             </div>
             <dl>
                 <dt>STARRING</dt>
                 <dd>
-                    Patrick Stewart <br /> Mako <br /> Sarah Michelle Gellar <br />
+                    Patrick Stewart <br/> Mako <br/> Sarah Michelle Gellar <br/>
                     Kevin Smith
                 </dd>
 
@@ -207,11 +208,13 @@
 
                 <dt>MOVIE SYNOPSIS</dt>
                 <dd>After the defeat of their old arch nemesis, The Shredder,
-                    the Turtles have grown apart as a family.</dd>
+                    the Turtles have grown apart as a family.
+                </dd>
 
                 <dt>MPAA RATING</dt>
                 <dd>PG, for animated action violence, some scary cartoon pictures
-                    and mild language</dd>
+                    and mild language
+                </dd>
 
                 <dt>RELEASE COMPANY</dt>
                 <dd>Warner Bros.</dd>
@@ -221,7 +224,8 @@
 
                 <dt>GENRE</dt>
                 <dd>Action/Adventure, Comedies, Childrens, Martial Arts,
-                    Superheroes, Ninjas, Animated Characters</dd>
+                    Superheroes, Ninjas, Animated Characters
+                </dd>
 
                 <dt>BOX OFFICE</dt>
                 <dd>$54,132,596</dd>
@@ -246,9 +250,9 @@
 <div class="links">
     <a href="http://validator.w3.org/check?uri=referer"
        onclick="this.href='http://validator.w3.org/check?uri=' + document.URL"><img
-            src="pictures/w3c-html.png" alt="Valid HTML5" /></a> <br /> <a
+            src="pictures/w3c-html.png" alt="Valid HTML5"/></a> <br/> <a
         href="https://jigsaw.w3.org/css-validator/check?uri=referer"><img
-        src="pictures/w3c-css.png" alt="Valid CSS" /></a>
+        src="pictures/w3c-css.png" alt="Valid CSS"/></a>
 </div>
 </body>
 </html>
