--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
             <li><a href="javascriptexercices/buggypage3/buggy3.html">Buggy Page 3</a></li>
             <li><a href="javascriptexercices/buggypage4/buggy4.html">Buggy Page 4</a></li>
         </ul></li>
+        <li><a href="decorateMyText/decoratemytext.html">Lab 6: Decorate My Text</a>
+
 
     </ul>
 </div>
