--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
             <li><a href="javascriptexercices/buggypage4/buggy4.html">Buggy Page 4</a></li>
         </ul></li>
         <li><a href="decorateMyText/decoratemytext.html">Lab 6: Decorate My Text</a>
+        <li><a href="homework8/ascii.html">Homework 8: Animations</a>
 
 
     </ul>
