--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
         </ul></li>
         <li><a href="decorateMyText/decoratemytext.html">Lab 6: Decorate My Text</a>
         <li><a href="homework8/ascii.html">Homework 8: Animations</a>
+        <li><a href="">Module and Closure Lab</a>
+            <ul>
+            <li><a href="ModulesClosureLab/firstpart/index.html">delayMsg2 using module pattern</a></li>
+            <li><a href="ModulesClosureLab/secondpart/index.html">Buggy Page 1</a></li>
+
+        </ul></li>
 
 
     </ul>
