--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
         <li><a href="homework8/ascii.html">Homework 8: Animations</a>
         <li><a href="">Module and Closure Lab</a>
             <ul>
-            <li><a href="ModulesClosureLab/firstpart/index.html">delayMsg2 using module pattern</a></li>
-            <li><a href="ModulesClosureLab/secondpart/index.html">Buggy Page 1</a></li>
+            <li><a href="ModulesClosureLab/firstpart/index.html">Exercice 1: delayMsg2 using module pattern</a></li>
+            <li><a href="ModulesClosureLab/secondpart/index.html">Exercice 2: create new account</a></li>
 
         </ul></li>
 
