--- a/ModulesClosureLab/secondpart/index.html
+++ b/ModulesClosureLab/secondpart/index.html
@@ -21,9 +21,9 @@
         <label>Deposit :</label>
         <input type="text" name="deposit" id="deposit">
         <br>
-        <input type="button" name="create" value="Create new account" onclick="createAccount()">
+        <input type="button" name="create" id="createAccount" value="Create new account" >
         <br>
-        <textarea name="accounts" id="accounts" cols="70" rows="10" onchange="updateList()"></textarea>
+        <textarea name="accounts" id="accounts" cols="70" rows="10" ></textarea>
     </div>
 </body>
 </html>
