--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
             <ul>
             <li><a href="ModulesClosureLab/firstpart/index.html">Exercice 1: delayMsg2 using module pattern</a></li>
             <li><a href="ModulesClosureLab/secondpart/index.html">Exercice 2: create new account</a></li>
-
         </ul></li>
+        <li><a href="mazelab/maze.html">Lab 7: Maze game</a>
 
 
     </ul>
