--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
             <li><a href="ModulesClosureLab/secondpart/index.html">Exercice 2: create new account</a></li>
         </ul></li>
         <li><a href="mazelab/maze.html">Lab 7: Maze game</a>
+        <li><a href="15puzzle/fifteen.html">Homework 9: 15 Puzzles</a>
 
 
     </ul>
