--- a/15puzzle/fifteen.html
+++ b/15puzzle/fifteen.html
@@ -49,7 +49,7 @@
         </a>
         <a href="http://jigsaw.w3.org/css-validator/check/referer">
             <img src="http://mumstudents.org/cs472/2013-09/images/w3c-css.png" alt="Valid CSS!"></a>
-        <a href="http://webster.cs.washington.edu/jslint?referer">
+        <a href="https://jshint.com/">
             <img src="http://mumstudents.org/jshint/jshint-small.png" alt="JavaScript Lint">
         </a>
     </div>
