--- a/15puzzle/fifteen.html
+++ b/15puzzle/fifteen.html
@@ -45,12 +45,12 @@
     </p>
     <div id="w3c">
         <a href="http://validator.w3.org/check/referer">
-            <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator">
+            <img src="../pictures/w3c-html.png" alt="html validator">
         </a>
         <a href="http://jigsaw.w3.org/css-validator/check/referer">
-            <img src="http://mumstudents.org/cs472/2013-09/images/w3c-css.png" alt="Valid CSS!"></a>
+            <img src="../pictures/w3c-css.png" alt="Valid CSS!"></a>
         <a href="https://jshint.com/">
-            <img src="http://mumstudents.org/jshint/jshint-small.png" alt="JavaScript Lint">
+            <img src="../pictures/jshint-small.png" alt="JavaScript Lint">
         </a>
     </div>
 </body>
