--- a/15puzzle/fifteen.html
+++ b/15puzzle/fifteen.html
@@ -44,11 +44,14 @@
         a postmaster in Canastota, New York.
     </p>
     <div id="w3c">
-        <a href="http://validator.w3.org/check/referer">
-            <img src="../pictures/w3c-html.png" alt="html validator">
-        </a>
-        <a href="http://jigsaw.w3.org/css-validator/check/referer">
-            <img src="../pictures/w3c-css.png" alt="Valid CSS!"></a>
+        <a href="http://validator.w3.org/check?uri=referer"
+           onclick="this.href='http://validator.w3.org/check?uri=' +
+                document.URL"> <img
+                src="pictures/w3c-html.png"
+                alt="html validator"/></a>
+
+        <a href="https://jigsaw.w3.org/css-validator/check/referer">
+            <img src="pictures/vcss.gif" alt="Valid CSS!"/></a>
         <a href="https://jshint.com/">
             <img src="../pictures/jshint-small.png" alt="JavaScript Lint">
         </a>
